更新bug 再研究

--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -17,7 +17,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title">群组名称</h1>
+			<h1 id="title" class="mui-title"></h1>
 			<a id="write" class="mui-icon iconfont icon-fabu-copy mui-pull-right"></a>
 			<a id="group" class="mui-icon iconfont icon-renren  mui-pull-right"></a>
 		</header>
