--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -232,30 +232,32 @@ none; margin-top: -15px;">登录</button>
 							}
 						}
 					}
-					//47.获取APP版本号
-					console.log('plus.os.name:' + plus.os.name);
-					var tempVVL = 'android';
-					if(plus.os.name == 'iOS') {
-						tempVVL = 'ios';
-					}
-					//所需参数
-					var comData9 = {
-						uuid: plus.device.uuid, //用户设备号
-						appid: plus.runtime.appid, //应用ID
-						vvl: tempVVL //安卓：android,苹果：ios
-					};
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					postDataPro_PostVerInfo(comData9, wd, function(data) {
-						wd.close();
-						console.log('获取APP版本号:' + JSON.stringify(data));
-						if(data.RspCode == 0) {
-							appUpdate.getAppVersion(JSON.parse(data.RspData));
-							console.log('获取APP版本号:' + JSON.stringify(data.RspData));
-						} else {
-							mui.toast(data.RspTxt);
+					if(plus.os.name == "Android") {
+						//47.获取APP版本号
+						console.log('plus.os.name:' + plus.os.name);
+						var tempVVL = 'android';
+						if(plus.os.name == 'iOS') {
+							tempVVL = 'ios';
 						}
-					});
+						//所需参数
+						var comData9 = {
+							uuid: plus.device.uuid, //用户设备号
+							appid: plus.runtime.appid, //应用ID
+							vvl: tempVVL //安卓：android,苹果：ios
+						};
+						// 等待的对话框
+						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						postDataPro_PostVerInfo(comData9, wd, function(data) {
+							wd.close();
+							console.log('获取APP版本号:' + JSON.stringify(data));
+							if(data.RspCode == 0) {
+								appUpdate.getAppVersion(JSON.parse(data.RspData));
+								console.log('获取APP版本号:' + JSON.stringify(data.RspData));
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+					}
 					//---设置沉浸式---end---
 					events.preload('register_phoneNumber.html');
 					plus.screen.lockOrientation("portrait-primary");
