1、搜索界面不能跳转 2、登录界面，默认登录添加账号、密码显示 3、退出登录时，有昵称，不显示修改

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -26,6 +26,11 @@
 				//---获取数据并传递数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var data = main.data; //接收A页面传入参数值
+				//从搜索界面跳转的数据，TabId是问题id，得转换为话题id
+				var temp0 = data.channelInfo.AskChannelId;
+				if (temp0>0) {
+					data.channelInfo.TabId = temp0;
+				}
 				console.log('qiuzhi-question.html:' + JSON.stringify(data));
 				events.createSubAppendMain(main, 'qiuzhi-questionSub.html', data, function(sub) {
 					setTimeout(function() {
