--- a/JiaoBaoYun-hb/html/quan/classSpace-persons.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-persons.html
@@ -21,8 +21,8 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">标题</h1>
 		</header>
-		<div class="mui-content">
-			<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9">
+		<div class="mui-content mui-scroll-wrapper">
+			<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9 mui-scroll">
 
 			</ul>
 		</div>
