--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -117,6 +117,12 @@
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
 					modifypasswordBtn.innerHTML = '设置密码';
+					//个人信息
+					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+					//如果有昵称，则不显示
+					if (personal.unick.length>0) {
+						unickName0.style.display = 'none';
+					}
 					console.log('333333');
 					clearData();
 				});
