空间和展现展开全部

--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -183,7 +183,7 @@
 	</head>
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<h1 class="mui-title">空间详情</h1>
+		<h1 id="spaceDetail" class="mui-title">空间详情</h1>
 	</header>
 
 	<body>
