修改专家主页中跳转的界面

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -186,13 +186,16 @@
 							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
-								setTimeout(function() {
-								//结束下拉刷新
-								self.endPullUpToRefresh();
-							}, 1000);
 							} else {
 								mui.toast('没有更多了');
 							}
+							setTimeout(function() {
+								//结束下拉刷新
+								self.endPullUpToRefresh();
+								if(mui(".mui-table-view-cell").length < 10) {
+									mui(".mui-pull-loading")[0].innerHTML = "";
+								}
+							}, 1000);
 						}
 					}
 				});
