--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -185,7 +185,7 @@
 	mui.plusReady(function() {
 		ExpertsInfo = plus.webview.currentWebview().data;
 		//25.获取某个用户的提问列表
-	
+
 		console.log('专家回答页传值：' + JSON.stringify(ExpertsInfo));
 		mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 			var index = this.id.replace('li', '');
@@ -222,12 +222,14 @@
 					}
 					setTimeout(function() {
 						//结束下拉刷新
-						self.endPullDownToRefresh();
+						self.endPullUpToRefresh();
+						if(mui(".mui-table-view-cell").length < 10) {
+							mui(".mui-pull-loading")[0].innerHTML = "";
+						}
 					}, 1000);
 				}
 			}
 		});
-
 	});
 
 	//25.获取某个用户的提问列表
@@ -261,17 +263,16 @@
 	};
 
 	function addData() {
-		var dt_now=new Date();
-		var int_year=dt_now.getYear();
+		var dt_now = new Date();
+		var int_year = dt_now.getYear();
 		for(var i = 0; i < datasource.length; i++) {
-			var str_Time="";
-			var dt_item= new Date(datasource[i].AskTime.replace("-","/"));
-			if(int_year==dt_item.getYear())
-			{
-				str_Time= events.format(dt_item,"MM-dd hh:mm")
-			}
-			else{
-				str_Time=events.format(dt_item,"yyyy-MM-dd hh:mm")
+			var str_Time = "";
+			var dt_item = new Date(datasource[i].AskTime);
+			console.log('dt_item:'+dt_item+','+datasource[i].AskTime);
+			if(int_year == dt_item.getYear()) {
+				str_Time = events.format(dt_item, "MM-dd hh:mm")
+			} else {
+				str_Time = events.format(dt_item, "yyyy-MM-dd hh:mm")
 			}
 			var list = document.getElementById("list-container");
 			var li = document.createElement("li");
@@ -279,11 +280,10 @@
 			li.className = 'mui-table-view-cell';
 			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
 				'<h4 class="mui-ellipsis">' + datasource[i].AskTitle +
-				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答  ' + datasource[i].FocusNum + '关注  ' + str_Time +'</p></div></div>'
+				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答  ' + datasource[i].FocusNum + '关注  ' + str_Time + '</p></div></div>'
 			list.appendChild(li);
 		}
 	}
-
 </script>
 </body>
 
