1、安卓手机无专家列表的问题 2、选择话题 重置选择的专家 3、发布按钮不好点的问题 4、重复点赞的问题

--- a/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
@@ -34,7 +34,9 @@
 
 		</div>
 		<script type="text/javascript">
-			var datasource = plus.webview.currentWebview().data;
+			var datasource;
+			mui.plusReady(function(){
+				datasource = plus.webview.currentWebview().data;
 			console.log('获取的数据：' + JSON.stringify(datasource));
 			addExperts();
 			events.addTap('publish', function() {
@@ -51,6 +53,8 @@
 				events.fireToPageWithData('qiuzhi-newQ.html', 'atExpert', selectedBoxes);
 //				mui.back();
 			})
+			})
+			
 
 			function addExperts() {
 				var ul = document.getElementById("ExpertList");
