--- a/JiaoBaoYun-hb/html/show/add-comment.html
+++ b/JiaoBaoYun-hb/html/show/add-comment.html
@@ -16,7 +16,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left "></a>
 			<h1 id="title" class="mui-title">评论</h1>
-			<a id="btn-reply" class="mui-pull-right">发布</a>
+			<a id="btn-reply" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">发布</a>
 		</header>
 		<div class="mui-content">
 			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>
