回答界面图片

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -39,7 +39,7 @@
 				<!--问题控件-->
 				<div class="questionContent-container">
 					<div id="question-content" class="question-content"></div>
-					<div id="answer-imgs" class="answer-imgs mui-col-xs-4 mui-col-sm-4" ></div>
+					<div id="answer-imgs" class="answer-imgs" ></div>
 					<div class="">
 						<p id="answer-time" class="display-inlineBlock answer-time"><span id="answer-zanNo" class="zan-num">100</span>赞·5小时前</p>
 						<p id="support-answer" class="support-container display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-support"></span> </p>
